# markov

./: CMakeLists.txt  README.md
example/: text.txt
include/: call_with_time.hpp  hash_combine.hpp  hash_vector.hpp  markov_chain.hpp  markovchain.hpp
src/: base.cpp  creator.cpp  executing.cpp  executor.cpp  learning.cpp  main.cpp  markov_chain.cpp  markovchain.cpp  node.cpp
